# mlops

./: .gitignore  README.rst  pyproject.toml
mlops/: eda.py  generacion_modelo.py
