[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Claudio Collao <clcollao@alumnos.uai.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
scikit-learn = "^1.1.3"
pyspark = "^3.3.1"
mlflow = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
